--- a/app/src/main/res/menu/menu_navigation_drawer_news.xml
+++ b/app/src/main/res/menu/menu_navigation_drawer_news.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_feedback"
             android:icon="@drawable/ic_star"
-            android:title="Feedback" />
+            android:title="Reglas" />
     </group>
     <group
         android:id="@+id/grp_2"
