--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -47,44 +48,22 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_height="88dp"
-                        android:layout_width="88dp"
+                        android:layout_height="120dp"
+                        android:layout_width="120dp"
                         android:layout_gravity="center"
                         android:background="@drawable/ic_no_bg_logo"/>
-                    <!--<TextView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_gravity="center"-->
-                        <!--android:text="C"-->
-                        <!--android:textStyle="bold"-->
-                        <!--android:textSize="24dp"-->
-                        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
-                        <!--android:textColor="@android:color/black" />-->
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <AutoCompleteTextView
+                            android:id="@+id/nombre"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Nombre"
                             android:inputType="text"
-                            android:maxLines="1"
-                            android:singleLine="true" />
-
-                    </android.support.design.widget.TextInputLayout>
-
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <AutoCompleteTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="Usuario"
-                            android:inputType="text"
+                            android:maxLength="20"
                             android:maxLines="1"
                             android:singleLine="true" />
 
@@ -95,6 +74,7 @@
                         android:layout_height="wrap_content">
 
                         <AutoCompleteTextView
+                            android:id="@+id/correo"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Correo"
@@ -109,6 +89,7 @@
                         android:layout_height="wrap_content">
 
                         <EditText
+                            android:id="@+id/contra"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Contraseña"
@@ -123,6 +104,7 @@
                         android:layout_height="wrap_content">
 
                         <EditText
+                            android:id="@+id/recontra"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Repetir contraseña"
@@ -144,7 +126,7 @@
                             android:layout_height="wrap_content"
                             android:paddingLeft="@dimen/spacing_medium"
                             android:paddingRight="@dimen/spacing_medium"
-                            android:text="Sexo"
+                            android:text="Género"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                             android:textColor="@color/grey_90" />
 
@@ -156,10 +138,10 @@
                             android:orientation="horizontal">
 
                             <android.support.v7.widget.AppCompatRadioButton
-                                android:id="@+id/radio_female"
+                                android:id="@+id/radio_male"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Mujer"
+                                android:text="Hombre"
                                 android:checked="true"
                                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                 android:textColor="@color/grey_90" />
@@ -169,10 +151,10 @@
                                 android:layout_height="0dp" />
 
                             <android.support.v7.widget.AppCompatRadioButton
-                                android:id="@+id/radio_male"
+                                android:id="@+id/radio_female"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Hombre"
+                                android:text="Mujer"
                                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                 android:textColor="@color/grey_90" />
 
@@ -180,15 +162,37 @@
 
                     </LinearLayout>
 
-                    <Button
-                        android:id="@+id/email_sign_in_button"
-                        android:layout_width="match_parent"
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/spacing_large"
-                        android:background="@drawable/btn_rounded_orange"
-                        android:text="Registrarse"
-                        android:textColor="@android:color/white" />
+                        android:padding="@dimen/spacing_large"
+                        android:layout_gravity="center_horizontal">
 
+                        <android.support.design.widget.FloatingActionButton
+                            android:id="@+id/fab_sign_up"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:textStyle="bold"
+                            android:layout_margin="@dimen/spacing_large"
+                            android:tint="@android:color/white"
+                            app:backgroundTint="@color/colorPrimary"
+                            app:fabSize="normal"
+                            app:rippleColor="@color/colorPrimary"
+                            app:srcCompat="@drawable/ic_baseline_check_24px"
+                            android:visibility="visible"/>
+
+                        <ProgressBar
+                            android:id="@+id/progress_bar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:indeterminate="true"
+                            android:theme="@style/ProgressBar.White"
+                            android:visibility="gone" />
+
+                    </RelativeLayout>
 
                 </LinearLayout>
 
