--- a/app/src/main/res/layout/dialog_success.xml
+++ b/app/src/main/res/layout/dialog_success.xml
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
-            android:text="¡Ahora puedes ser parte de nuestra comunidad!"
+            android:text="¡Ahora puedes divertirte con tus compañeros!"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:textColor="@color/grey_60" />
@@ -68,7 +68,7 @@
             android:backgroundTint="@color/green_300"
             android:paddingLeft="@dimen/spacing_mlarge"
             android:paddingRight="@dimen/spacing_mlarge"
-            android:text="Empezar"
+            android:text="Iniciar Sesión"
             android:textColor="@android:color/white" />
 
     </LinearLayout>
