--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,34 +5,6 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:titleEnabled="false">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/material_bg_1"
-                app:layout_collapseMode="parallax" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nested_content"
         android:layout_width="match_parent"
@@ -48,19 +20,37 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="240dp"
+                android:foreground="@color/overlay_dark_10"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bg_profile_img" />
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/profile_image"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginTop="-60dp"
+                android:src="@drawable/male_profile_pic"
+                app:civ_border="true"
+                app:civ_border_color="@color/grey_10"
+                app:civ_border_width="2dp" />
+
             <TextView
+                android:id="@+id/nombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginBottom="@dimen/spacing_medium"
-                android:text="Joel Dominguez"
+                android:text="Usuario"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                 android:textColor="@color/grey_90" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
-                android:background="@color/colorPrimaryLight" />
+                android:background="@color/colorPrimary" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -101,6 +91,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/experiencia"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="1252"
@@ -128,6 +119,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/rank"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="5"
@@ -155,6 +147,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/nivel"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="3"
@@ -194,6 +187,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/preguntas_total"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="151"
@@ -221,7 +215,7 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/textView11"
+                                android:id="@+id/correctas"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="66"
@@ -249,6 +243,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/incorrectas"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="85"
@@ -291,6 +286,7 @@
                 android:scrollbarSize="2dp">
 
                 <LinearLayout
+                    android:id="@+id/logros_container"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -302,8 +298,8 @@
                         android:layout_height="90dp"
                         android:layout_marginEnd="@dimen/spacing_medium"
                         android:layout_marginRight="@dimen/spacing_medium"
-                        android:scaleType="centerCrop"
-                        android:src="@color/grey_20" />
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/trophy" />
 
                     <ImageView
                         android:id="@+id/image_2"
@@ -311,8 +307,8 @@
                         android:layout_height="90dp"
                         android:layout_marginEnd="@dimen/spacing_medium"
                         android:layout_marginRight="@dimen/spacing_medium"
-                        android:scaleType="centerCrop"
-                        android:src="@color/grey_20" />
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/trophy" />
 
                     <ImageView
                         android:id="@+id/image_3"
@@ -320,8 +316,8 @@
                         android:layout_height="90dp"
                         android:layout_marginEnd="@dimen/spacing_medium"
                         android:layout_marginRight="@dimen/spacing_medium"
-                        android:scaleType="centerCrop"
-                        android:src="@color/grey_20" />
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/trophy" />
 
                     <ImageView
                         android:id="@+id/image_4"
@@ -329,8 +325,8 @@
                         android:layout_height="90dp"
                         android:layout_marginEnd="@dimen/spacing_medium"
                         android:layout_marginRight="@dimen/spacing_medium"
-                        android:scaleType="centerCrop"
-                        android:src="@color/grey_20" />
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/trophy" />
 
                     <ImageView
                         android:id="@+id/image_5"
@@ -338,29 +334,19 @@
                         android:layout_height="90dp"
                         android:layout_marginEnd="@dimen/spacing_medium"
                         android:layout_marginRight="@dimen/spacing_medium"
-                        android:scaleType="centerCrop"
-                        android:src="@color/grey_20" />
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/trophy" />
 
                 </LinearLayout>
 
             </HorizontalScrollView>
 
+            <View
+                android:layout_width="0dp"
+                android:layout_height="25dp"/>
 
         </LinearLayout>
 
-
     </android.support.v4.widget.NestedScrollView>
-
-
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/photo_male_8"
-        app:civ_border="true"
-        app:civ_border_width="2dp"
-        app:layout_anchor="@id/app_bar_layout"
-        app:layout_anchorGravity="bottom|center" />
-
 
 </android.support.design.widget.CoordinatorLayout>
