--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -10,6 +10,12 @@
         android:layout_height="220dp"
         android:background="@color/colorPrimary" />
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:isScrollContainer="true">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,6 +40,7 @@
             app:cardCornerRadius="6dp"
             app:cardElevation="5dp">
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -51,12 +58,6 @@
                     android:textColor="@color/grey_90"
                     android:textStyle="bold" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/white"
-                    android:orientation="vertical">
-
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recyclerView"
                         android:layout_width="match_parent"
@@ -64,12 +65,8 @@
                         android:scrollbars="vertical"
                         android:scrollingCache="true" />
 
-                </LinearLayout>
-
-
-
-
             </LinearLayout>
+
         </android.support.v7.widget.CardView>
 
         <View
@@ -77,5 +74,7 @@
             android:layout_height="@dimen/spacing_large" />
 
     </LinearLayout>
+
+</android.support.v4.widget.NestedScrollView>
 
 </RelativeLayout>
