--- a/app/src/main/res/layout/item_people_chat.xml
+++ b/app/src/main/res/layout/item_people_chat.xml
@@ -47,6 +47,11 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/grey_90" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/description"
                     android:layout_width="wrap_content"
@@ -55,10 +60,23 @@
                     android:layout_marginRight="@dimen/spacing_middle"
                     android:layout_marginTop="@dimen/spacing_medium"
                     android:maxLines="2"
-                    android:text="@string/middle_lorem_ipsum"
-
+                    android:text="Experiencia:"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/grey_40" />
+
+                    <TextView
+                        android:id="@+id/experiencia_item"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/spacing_middle"
+                        android:layout_marginRight="@dimen/spacing_middle"
+                        android:layout_marginTop="@dimen/spacing_medium"
+                        android:maxLines="2"
+                        android:text="0000"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                        android:textColor="@color/grey_40" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
