--- a/app/src/main/res/menu/menu_navigation_drawer_news.xml
+++ b/app/src/main/res/menu/menu_navigation_drawer_news.xml
@@ -31,7 +31,7 @@
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_help"
-            android:title="Acerca" />
+            android:title="Creditos" />
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout_sign"
