Actualizacion de casi la ultima version sin el update de datos de usuario

--- a/app/src/main/res/layout/dialog_correct.xml
+++ b/app/src/main/res/layout/dialog_correct.xml
@@ -57,6 +57,7 @@
             android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/value_exp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_large"
