--- a/app/src/main/res/layout/dialog_incorrect.xml
+++ b/app/src/main/res/layout/dialog_incorrect.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/grey_90"
     android:orientation="vertical">
 
@@ -24,15 +25,14 @@
                 android:layout_height="60dp"
                 android:layout_gravity="bottom"
                 android:tint="@android:color/white"
-
-                android:src="@drawable/places_ic_clear" />
+                app:srcCompat="@drawable/places_ic_clear" />
 
             <ImageView
                 android:id="@+id/icon_2"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:tint="@android:color/white"
-                android:src="@drawable/places_ic_clear" />
+                app:srcCompat="@drawable/places_ic_clear" />
 
             <ImageView
                 android:id="@+id/icon_3"
@@ -40,7 +40,7 @@
                 android:layout_height="60dp"
                 android:layout_gravity="bottom"
                 android:tint="@android:color/white"
-                android:src="@drawable/places_ic_clear" />
+                app:srcCompat="@drawable/places_ic_clear" />
 
         </LinearLayout>
 
@@ -54,22 +54,25 @@
             android:textColor="@android:color/white"
             android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/spacing_middle"
+            android:layout_marginRight="@dimen/spacing_middle"
+            android:layout_marginTop="@dimen/spacing_medium"
+            android:text="Respuesta:"
+            android:textStyle="italic|bold"
+            android:layout_gravity="start"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            android:textColor="@color/grey_20" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/spacing_middle"
-                android:layout_marginRight="@dimen/spacing_middle"
-                android:layout_marginTop="@dimen/spacing_medium"
-                android:text="Respuesta:"
-                android:layout_gravity="start"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:textColor="@color/grey_20" />
+
             <TextView
                 android:id="@+id/respuesta"
                 android:layout_width="wrap_content"
@@ -90,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/spacing_middle"
             android:layout_marginRight="@dimen/spacing_middle"
-            android:layout_marginTop="@dimen/spacing_medium"
+            android:layout_marginTop="@dimen/spacing_xmedium"
             android:text="Recuerda echarle un vistazo al tutorial del nivel"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
